@@ -451,39 +451,4 @@ void KnownDAFreeAll();
 /*=========================================================================*/
 #endif
 
-
-
-#ifdef WIN32
-#define strncasecmp(String1, String2, Num) strnicmp(String1, String2, Num)
-#define strcasecmp(String1, String2, Num) stricmp(String1, String2, Num)
-#define inet_aton(opt,bind) ((bind)->s_addr = inet_addr(opt))
-#else
-#ifndef HAVE_STRNCASECMP
-static int
-strncasecmp(const char *s1, const char *s2, size_t len)
-{
-    while ( *s1 && (*s1 == *s2 || tolower(*s1) == tolower(*s2)) )
-    {
-        len--;
-        if(len == 0) return 0;
-        s1++;
-        s2++;
-    }
-    return(int) *(unsigned char *)s1 - (int) *(unsigned char *)s2;
-}
-#endif
-#ifndef HAVE_STRCASECMP
-static int
-strcasecmp(const char *s1, const char *s2)
-{
-    while ( *s1 && (*s1 == *s2 || tolower(*s1) == tolower(*s2)) )
-    {
-        s1++;
-        s2++;
-    }
-    return(int) *(unsigned char *)s1 - (int) *(unsigned char *)s2;
-}
-#endif
-#endif /*WIN32*/
-
 #endif /*LIBSLP_H_INCLUDED*/ 
