@@ -79,33 +79,3 @@
 /* we do a kind of abstraction layer for socket descriptors, since on NT
    they're of type "SOCKET" */
 typedef int sockfd_t;
-
-#ifndef HAVE_STRNCASECMP
-static int
-strncasecmp(const char *s1, const char *s2, size_t len)
-{
-    while ( *s1 && (*s1 == *s2 || tolower(*s1) == tolower(*s2)) )
-    {
-        len--;
-        if(len == 0) return 0;
-        s1++;
-        s2++;
-    }
-    return(int) *(unsigned char *)s1 - (int) *(unsigned char *)s2;
-}
-
-#endif
-
-#ifndef HAVE_STRCASECMP
-static int
-strcasecmp(const char *s1, const char *s2)
-{
-    while ( *s1 && (*s1 == *s2 || tolower(*s1) == tolower(*s2)) )
-    {
-        s1++;
-        s2++;
-    }
-    return(int) *(unsigned char *)s1 - (int) *(unsigned char *)s2;
-}
-#endif
-
