@@ -69,9 +69,6 @@
     #define MAX_PATH    256
 #endif
 
-#define strncasecmp(String1, String2, Num) strnicmp(String1, String2, Num)
-#define strcasecmp(String1, String2, Num) stricmp(String1, String2, Num)
-
 typedef DWORD               pid_t;
 typedef DWORD               uid_t;
 typedef int                 socklen_t;
